Added jQuery.annotate to app

--- a/app/assets/stylesheets/poems.css.scss.erb
+++ b/app/assets/stylesheets/poems.css.scss.erb
@@ -4,3 +4,5 @@
 
 label.inline { margin-right: 15px; }
 textarea { height: auto; }
+
+ul#annotations {list-style-image: url(<%= asset_path 'icon-remove.jpeg' %>)}
