--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -29,6 +29,12 @@ a {
   }
 }
 
+a.button {
+  &:visited {
+    color: #fff !important;
+  }
+}
+
 div {
   &.field, &.actions {
     margin-bottom: 10px;
