--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -1,28 +1,8 @@
 <h1>Listing poems</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @poems.each do |poem| %>
-      <tr>
-        <td><%= poem.title %></td>
-        <td><%= poem.content %></td>
-        <td><%= link_to 'Show', poem %></td>
-        <td><%= link_to 'Edit', edit_poem_path(poem) %></td>
-        <td><%= link_to 'Destroy', poem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<ul id="poems">
+  <%= render partial: "poem", collection: @poems %>
+</ul>
 
 <br>
 
