--- a/app/assets/stylesheets/poems.css.scss.erb
+++ b/app/assets/stylesheets/poems.css.scss.erb
@@ -1,6 +1,37 @@
-// Place all the styles related to the poems controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 label.inline { margin-right: 15px; }
 textarea { height: auto; }
+
+#poem {
+	color: rgb(51, 51, 50);
+	font-family: Georgia, Cambria, 'Times New Roman', Times, serif;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: normal;
+	letter-spacing: 0.1599999964237213px;
+	line-height: 33px;
+}
+
+#poem_title {
+	font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+	font-size: 50px;
+	font-style: normal;
+	font-weight: bold;
+	letter-spacing: -2px;
+	line-height: 55px
+}
+
+[contentEditable=true]:empty:not(:focus):before{
+  content:attr(data-ph)
+}
+
+.dialog-content, .annotate-fill-content {
+	font-style: italic;
+	font-size: 10px;
+}
+
+#poem_actions {
+	text-align: center;
+	width: 486px;
+	margin-left: auto;
+	margin-right: auto;
+}
