Added new tests and separated articles into different html files

--- a/app/assets/javascripts/poems.js.coffee.erb
+++ b/app/assets/javascripts/poems.js.coffee.erb
@@ -102,7 +102,7 @@ $ ->
 		$('iframe').contents().find('#poem.annotatable').annotate
 			annotation:
 				container: $('ul#annotations')
-				position: 'top'
+				position: 'left'
 				offset_amount: 10
 				template: "<span class='annotate-fill-userImage'></span> <button type='button' class='annotate-remove button alert small right'>x</button> <div class='annotation-inner'><p class='bold annotate-fill-userName'></p><p class='annotate-fill-content' data-input-name='content' contenteditable='true'></p><div style='clear: both;'></div></div><form><input type='hidden' name='content'></input><button type='submit' class='hide small'>Update</button><button type='button' class='secondary annotate-revert small hide'>Cancel</button></form>"
 				tag_name: 'li'
